--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "js-bark",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "MIT",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -12,12 +13,13 @@
     "@types/react-dom": "^16.9.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.0.1",
     "react-scripts": "3.4.1",
     "typescript": "^3.7.5"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "styleguidist server",
+    "build": "styleguidist build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
