--- a/.github/workflows/firebase.yml
+++ b/.github/workflows/firebase.yml
@@ -31,7 +31,9 @@ jobs:
         CI: true
 
     - name: Deploy to Firebase
-      uses: lowply/deploy-firebase@v0.0.2
-      env:
-        FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
-        FIREBASE_PROJECT: coreofscience
+      run: |
+        npm install firebase-tools
+        npx firebase deploy \
+          -m "${GITHUB_SHA}" \
+          --project coreofscience \
+          --only hosting:js-bark
