Do some decorations in CSS

--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash.range": "^3.2.6",
     "@types/styled-components": "^5.1.0",
+    "lodash.range": "^3.2.0",
     "react-styleguidist": "^11.0.6"
   }
 }
